--- a/phase2/app/src/main/res/layout/activity_instructions.xml
+++ b/phase2/app/src/main/res/layout/activity_instructions.xml
@@ -11,13 +11,13 @@
         android:id="@+id/gameNameText"
         android:layout_width="330dp"
         android:layout_height="40dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="48dp"
         android:fontFamily="@font/renner"
         android:text="Game Name "
         android:textAlignment="center"
         android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintHorizontal_bias="0.493"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -26,22 +26,24 @@
         android:layout_width="127dp"
         android:layout_height="36dp"
         android:layout_marginStart="48dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="40dp"
         android:fontFamily="@font/renner"
         android:text="@string/instructions"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.025"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/gameNameText" />
 
     <TextView
         android:id="@+id/instructionsText"
-        android:layout_width="301dp"
-        android:layout_height="401dp"
-        android:layout_marginTop="28dp"
+        android:layout_width="304dp"
+        android:layout_height="322dp"
+        android:layout_marginTop="20dp"
+        android:textAlignment="center"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/instructionsSubtitleText" />
 
