--- a/phase2/app/src/main/res/layout/activity_leader_board.xml
+++ b/phase2/app/src/main/res/layout/activity_leader_board.xml
@@ -8,7 +8,7 @@
     tools:context=".Statistics.LeaderBoardActivity">
 
     <TextView
-        android:id="@+id/title"
+        android:id="@+id/titleText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="64dp"
@@ -249,7 +249,7 @@
         android:text="@string/user"
         android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/title" />
+        app:layout_constraintTop_toBottomOf="@+id/titleText" />
 
     <TextView
         android:id="@+id/rankByLabel"
