--- a/phase2/app/src/main/res/layout/activity_settings.xml
+++ b/phase2/app/src/main/res/layout/activity_settings.xml
@@ -7,28 +7,17 @@
     android:layout_height="match_parent"
     tools:context=".Menus.SettingsActivity">
 
-    <TextView
-        android:id="@+id/settingsText"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:layout_marginTop="16dp"
-        android:background="@drawable/settings_icon"
-        android:fontFamily="@font/renner"
-        android:textSize="30sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
 
     <RadioGroup
         android:id="@+id/languageRadioGroup"
         android:layout_width="112dp"
         android:layout_height="94dp"
         android:layout_marginStart="76dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="20dp"
+        app:layout_constraintEnd_toStartOf="@+id/changeCharacterButton"
+        app:layout_constraintHorizontal_bias="0.074"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/settingsText">
+        app:layout_constraintTop_toBottomOf="@+id/languageText">
 
         <RadioButton
             android:id="@+id/english"
@@ -52,54 +41,40 @@
 
     </RadioGroup>
 
-    <Button
-        android:id="@+id/changeCharacterButton"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
-        android:background="@drawable/lb_ic_playback_loop"
-        android:backgroundTint="@color/lb_playback_icon_highlight_no_theme"
-        android:onClick="onChangeCharacterPressed"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/languageRadioGroup"
-        app:layout_constraintTop_toBottomOf="@+id/characterImage" />
+    <TextView
+        android:id="@+id/languageText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="52dp"
+        android:layout_marginTop="24dp"
+        android:fontFamily="@font/renner"
+        android:text="Language"
+        android:textSize="24sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/titleText" />
 
     <ImageView
         android:id="@+id/characterImage"
         android:layout_width="79dp"
         android:layout_height="73dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="24dp"
         android:layout_marginEnd="16dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.305"
         app:layout_constraintStart_toEndOf="@+id/languageRadioGroup"
-        app:layout_constraintTop_toBottomOf="@+id/settingsText" />
-
-    <Button
-        android:id="@+id/saveButton"
-        android:layout_width="64dp"
-        android:layout_height="61dp"
-        android:background="@drawable/lb_ic_play"
-        android:backgroundTint="@color/go_green"
-        android:onClick="onSaveButtonPressed"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/themeButtons"
-        app:layout_constraintVertical_bias="0.27" />
+        app:layout_constraintTop_toBottomOf="@+id/titleText" />
 
     <LinearLayout
         android:id="@+id/themeButtons"
         android:layout_width="@dimen/theme_button_width"
         android:layout_height="311dp"
-        android:layout_marginTop="28dp"
+        android:layout_marginTop="8dp"
         android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/changeCharacterButton">
+        app:layout_constraintTop_toBottomOf="@+id/themeText">
 
         <ImageButton
             android:id="@+id/summerButton"
@@ -141,5 +116,56 @@
             app:srcCompat="@drawable/autumn_option_temp" />
 
     </LinearLayout>
+
+    <TextView
+        android:id="@+id/themeText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="52dp"
+        android:layout_marginTop="8dp"
+        android:fontFamily="@font/renner"
+        android:text="Theme"
+        android:textSize="24sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/languageRadioGroup" />
+
+    <TextView
+        android:id="@+id/titleText"
+        android:layout_width="175dp"
+        android:layout_height="46dp"
+        android:layout_marginTop="44dp"
+        android:fontFamily="@font/renner"
+        android:text="@string/action_settings"
+        android:textAlignment="center"
+        android:textSize="30sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/backButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="32dp"
+        android:onClick="onBackButtonPressed"
+        android:text="@string/back"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/themeButtons"
+        app:layout_constraintVertical_bias="0.6" />
+
+    <Button
+        android:id="@+id/changeCharacterButton"
+        android:layout_width="113dp"
+        android:layout_height="51dp"
+        android:layout_marginTop="12dp"
+        android:layout_marginEnd="64dp"
+        android:onClick="onChangeCharacterPressed"
+        android:text="change character"
+        android:textSize="12sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/characterImage" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
