--- a/phase2/app/src/main/res/layout/activity_tile_game_instructions.xml
+++ b/phase2/app/src/main/res/layout/activity_tile_game_instructions.xml
@@ -69,7 +69,7 @@
         app:layout_constraintTop_toBottomOf="@+id/imageView3" />
 
     <TextView
-        android:id="@+id/title"
+        android:id="@+id/titleText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
@@ -91,7 +91,7 @@
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/title" />
+        app:layout_constraintTop_toBottomOf="@+id/titleText" />
 
     <ImageView
         android:id="@+id/imageView"
