--- a/phase2/app/src/main/res/layout/activity_settings.xml
+++ b/phase2/app/src/main/res/layout/activity_settings.xml
@@ -46,7 +46,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="52dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="16dp"
         android:fontFamily="@font/renner"
         android:text="Language"
         android:textSize="24sp"
@@ -58,7 +58,7 @@
         android:layout_width="79dp"
         android:layout_height="73dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.305"
@@ -77,7 +77,7 @@
         app:layout_constraintTop_toBottomOf="@+id/themeText">
 
         <ImageButton
-            android:id="@+id/summerButton"
+            android:id="@+id/woodlandButton"
             android:layout_width="@dimen/theme_button_width"
             android:layout_height="@dimen/theme_button_height"
             android:layout_marginStart="0dp"
@@ -86,21 +86,8 @@
             android:background="#00FFFFFF"
             android:cropToPadding="false"
             android:scaleType="fitCenter"
-            android:tag="summer"
-            app:srcCompat="@drawable/autumn_option_temp" />
-
-        <ImageButton
-            android:id="@+id/winterButton"
-            android:layout_width="@dimen/theme_button_width"
-            android:layout_height="@dimen/theme_button_height"
-            android:layout_marginStart="0dp"
-            android:layout_marginTop="16dp"
-            android:adjustViewBounds="false"
-            android:background="#00FFFFFF"
-            android:cropToPadding="false"
-            android:scaleType="fitCenter"
-            android:tag="winter"
-            app:srcCompat="@drawable/autumn_option_temp" />
+            android:tag="woodland"
+            app:srcCompat="@drawable/woodland_theme_button" />
 
         <ImageButton
             android:id="@+id/autumnButton"
@@ -113,7 +100,20 @@
             android:cropToPadding="false"
             android:scaleType="fitCenter"
             android:tag="autumn"
-            app:srcCompat="@drawable/autumn_option_temp" />
+            app:srcCompat="@drawable/woodland_autumn_theme_button" />
+
+        <ImageButton
+            android:id="@+id/dessertButton"
+            android:layout_width="@dimen/theme_button_width"
+            android:layout_height="@dimen/theme_button_height"
+            android:layout_marginStart="0dp"
+            android:layout_marginTop="16dp"
+            android:adjustViewBounds="false"
+            android:background="#00FFFFFF"
+            android:cropToPadding="false"
+            android:scaleType="fitCenter"
+            android:tag="dessert"
+            app:srcCompat="@drawable/dessert_theme_button" />
 
     </LinearLayout>
 
