--- a/phase2/app/src/main/res/layout/activity_picture_game.xml
+++ b/phase2/app/src/main/res/layout/activity_picture_game.xml
@@ -72,7 +72,7 @@
         android:layout_marginStart="72dp"
         android:layout_marginTop="36dp"
         android:fontFamily="@font/renner"
-        android:text="Number of Attempts:"
+        android:text="@string/number_of_attempts"
         android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/titleText" />
@@ -105,10 +105,9 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="52dp"
         android:fontFamily="@font/renner"
-        android:text="Picture Game"
+        android:text="@string/picture_game"
         android:textColor="#636363"
         android:textSize="36sp"
-        app:layout_constraintBottom_toTopOf="@+id/instructionText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
