--- a/phase2/app/src/main/res/layout/activity_reaction_time.xml
+++ b/phase2/app/src/main/res/layout/activity_reaction_time.xml
@@ -28,18 +28,17 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
+        android:layout_marginBottom="404dp"
         android:background="#00FFFFFF"
         android:fontFamily="@font/renner"
         android:gravity="center"
-        android:text="Ready Message"
+        android:text="@string/default_ready_message"
         android:textColor="@android:color/secondary_text_light"
         android:textSize="26sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.408" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/titleText"
@@ -47,7 +46,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:fontFamily="@font/renner"
-        android:text="Reaction Time"
+        android:text="@string/reaction_time"
         android:textColor="@android:color/secondary_text_light"
         android:textSize="36sp"
         app:layout_constraintBottom_toTopOf="@+id/instructionText"
@@ -79,7 +78,7 @@
         android:layout_height="39dp"
         android:layout_marginEnd="16dp"
         android:fontFamily="@font/renner"
-        android:text="0/5"
+        android:text="@string/default_num_levels"
         android:textColor="@android:color/secondary_text_light"
         android:textSize="18sp"
         app:layout_constraintBaseline_toBaselineOf="@+id/averageText"
@@ -92,7 +91,7 @@
         android:layout_marginStart="24dp"
         android:layout_marginBottom="32dp"
         android:fontFamily="@font/renner"
-        android:text="0ms"
+        android:text="@string/default_average_time"
         android:textColor="@android:color/secondary_text_light"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
