--- a/phase2/app/src/main/res/layout/activity_instructions.xml
+++ b/phase2/app/src/main/res/layout/activity_instructions.xml
@@ -13,7 +13,7 @@
         android:layout_height="40dp"
         android:layout_marginTop="48dp"
         android:fontFamily="@font/renner"
-        android:text="Game Name "
+        android:text="@string/default_game_title"
         android:textAlignment="center"
         android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -53,7 +53,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
         android:onClick="onPlayGamePressed"
-        android:text="play game"
+        android:text="@string/play_button"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
