--- a/phase2/app/src/main/res/layout/activity_login.xml
+++ b/phase2/app/src/main/res/layout/activity_login.xml
@@ -13,17 +13,21 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="278dp">
+        android:layout_height="219dp">
 
         <TextView
-            android:id="@+id/textView"
-            android:layout_width="117dp"
-            android:layout_height="44dp"
+            android:id="@+id/gameTitle"
+            android:layout_width="208dp"
+            android:layout_height="49dp"
+            android:layout_marginTop="108dp"
             android:fontFamily="@font/renner"
-            android:text="GAME NAME"
+            android:text="@string/default_game_title"
+            android:textAlignment="center"
+            android:textSize="30sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            tools:layout_editor_absoluteY="38dp" />
+            app:layout_constraintTop_toTopOf="parent" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <EditText
