--- a/phase2/app/src/main/res/layout/activity_statistics.xml
+++ b/phase2/app/src/main/res/layout/activity_statistics.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="72dp"
         android:fontFamily="@font/renner"
-        android:text="Statistics"
+        android:text="@string/statistics"
         android:textAllCaps="true"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -64,7 +64,7 @@
         android:layout_marginStart="64dp"
         android:layout_marginTop="20dp"
         android:fontFamily="@font/renner"
-        android:text="Ranking:"
+        android:text="@string/ranking_label"
         android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/playtimeText" />
@@ -76,7 +76,7 @@
         android:layout_marginStart="64dp"
         android:layout_marginTop="40dp"
         android:fontFamily="@font/renner"
-        android:text="Total Points:"
+        android:text="@string/points_label"
         android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/characterImage" />
@@ -88,7 +88,7 @@
         android:layout_marginStart="64dp"
         android:layout_marginTop="24dp"
         android:fontFamily="@font/renner"
-        android:text="Total Playtime:"
+        android:text="@string/playtime_label"
         android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/pointsText" />
@@ -123,7 +123,7 @@
         android:layout_marginTop="36dp"
         android:fontFamily="@font/renner"
         android:onClick="onBackPressed"
-        android:text="back"
+        android:text="@string/back"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -138,7 +138,7 @@
         android:layout_marginTop="52dp"
         android:layout_marginEnd="76dp"
         android:fontFamily="@font/renner"
-        android:text="username"
+        android:text="@string/default_username"
         android:textAlignment="viewStart"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
