Minor changes in main activity to make instructions show before games.

--- a/phase2/app/src/main/res/layout/activity_reaction_time.xml
+++ b/phase2/app/src/main/res/layout/activity_reaction_time.xml
@@ -86,8 +86,8 @@
 
     <TextView
         android:id="@+id/averageText"
-        android:layout_width="47dp"
-        android:layout_height="33dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:layout_marginBottom="32dp"
         android:fontFamily="@font/renner"
